--- a/parte2/Práctica Parte II.Rmd
+++ b/parte2/Práctica Parte II.Rmd
@@ -39,6 +39,8 @@ library(summarytools)
 library(randomForest)
 library(keras)
 library(magrittr)
+library(doParallel)
+library(MLmetrics)
 
 # Seleccionamos la semilla aleatoria para todo el cuaderno
 set.seed(12345)
@@ -330,8 +332,158 @@ Analizando la tabla de confusión vemos que el modelo no es capaz de predecir co
 Con este análisis podemos concluir que el modelo es nefasto prediciendo conexiones benignas. Además, tampoco es capaz de predecir correctamente las conexiones malignas, acertando en un 55.1% de las veces. Por tanto, el modelo de regresión logística no es adecuado para predecir si una conexión es benigna o maligna.
 
 
+# Validación cruzada. {#validacion-cruzada}
+A la hora de crear un modelo de machine learning, es importante seleccionar correctamente los hiperparámetros. Para probar combinaciones de diferentes hiperparámetros, crearemos vectores de hiperparámetros $v_i$, de forma que cada vector $v_i$ contenga un valor para cada uno de los $m$ hiperparámetros que queremos probar. Para cada vector de hiperparámetros $v_i$ realizaremos una validación cruzada, de forma que podamos obtener un resultado de precisión y error para cada combinación de hiperparámetros. Luego se usará la regla del One-Standard-Error para seleccionar el hiperparámetro más simple que tenga un rendimiento aceptable.
+
+Para realizar la validación cruzada se hará lo siguiente:
+
+1. Se dividirá el conjunto de entrenamiento en 5 pliegues, de forma que cada pliegue contenga el 20% de los datos de entrenamiento.
+2. Se entrenará el modelo con 4 pliegues y se validará con el pliegue restante. Se repetirá este proceso 5 veces, de forma que cada pliegue sea el de validación una vez.
+3. Se calculará la media de los resultados obtenidos en cada pliegue para obtener una estimación más precisa del rendimiento del modelo.
+4. Se calculará el error estándar de la media con el fin de obtener una estimación de la variabilidad de la media.
+5. Se seleccionará el hiperparámetro más simple cuyo valor medio más error estándar esté dentro del margen del valor máximo de precisión menos su error estándar. Por ejemplo, si el valor máximo es de $0.8 \pm 0.1$, se podrán seleccionar valores como $0.6 \pm 0.2$, ya que $0.6 + 0.2 > 0.8 - 0.1$.
+
+Para comprobar la eficacia de un conjunto de hiperparámetros hay que utilizar una métrica de evaluación. En nuestro caso, utilizaremos el F1-Score. Esta métrica es una media armónica de la precisión y la sensibilidad, y se calcula como $2 \times \frac{Precision \times Sensitivity}{Precision + Sensitivity}$. El F1-Score es una métrica más adecuada para problemas de clasificación binaria desbalanceada, como es nuestro caso, debido al balance que hace.
+
+Después de realizar la validación con un vector $v_i$, se guardará una media del F1-Score y un error estándar de esta media, de forma que para cada conjunto de hiperparámetros $v_i$ se obtendrá un F1-Score medio y un error estándar asociado. Luego, se escogerá el vector de hiperparámetros más sencillos que contenga un F1-Score medio más error estándar dentro del margen del valor máximo de F1-Score menos su error estándar. Es decir, si tenemos un máximo de F1-Score de $0.8 \pm 0.1$, podremos seleccionar valores como $0.6 \pm 0.2$, ya que $0.6 + 0.2 > 0.8 - 0.1$.
+
+
 # Bagging. {#bagging}
 
+## Explicación del modelo
+En esta sección vamos a realizar una clasificación mediante un algoritmo de Bagging, concretamente un algoritmo Random Forest. Vamos a explicar cómo funciona el modelo.
+
+El método de Bagging (Bootstrap Aggregating) es un procedimiento utilizado para reducir la varianza de un método de aprendizaje estadístico, siendo particularmente útil en el contexto de árboles de decisión, aunque puede usarse en otros métodos. Bagging implica crear múltiples copias del conjunto de datos de entrenamiento original usando el método Bootstrap, ajustar un árbol de decisión separado a cada copia, y luego combinar todos los árboles para crear un único modelo predictivo. En el caso de la clasificación, que es el que nos interesa, la predicción final se realiza por votación de los árboles individuales.
+
+El Random Forest es un caso particular de Bagging. El modelo de Random Forest introduce una modificación para decorrelacionar los árboles, reduciendo así la varianza cuando se promedian estos árboles. Al igual que en Bagging, Random Forest construye múltiples árboles de decisión sobre muestras de entrenamiento obtenidas mediante Bootstrap. Sin embargo, introduce un paso adicional en la construcción de cada árbol que marca la principal diferencia con el método de Bagging: cuando se construye un árbol de decisión este utiliza solo $m$ predictores, escodigos aleatoriamente de entre los $p$ predictores disponibles.
+
+Los hiperparámetros que utiliza el modelo Random Forest son los siguientes:
+
+- $mtry$: Número de predictores que se seleccionan aleatoriamente en cada nodo para elegir la división óptima. El valor de $mtry$ que suele usarse en el caso de la clasificación es $\sqrt{p}$, siendo $p$ el número total de predictores. Por lo tanto, probaremos con $mtry = \sqrt{p} - 1$, $mtry = \sqrt{p}$ y $mtry = \sqrt{p} + 1$.
+- $ntree$: Número de árboles que se construyen. A mayor cantidad de árboles se reduce la varianza del modelo, pero aumenta el tiempo de computación. Probaremos con $ntree = 300, 350, 400, 450, 500, 550, 600, 650, 700$.
+- $nsizes$: Número máximo de nodos terminales en los árboles. A mayor número de nodos terminales, más profundos serán los árboles y más complejo será el modelo. Como tenemos un total de 32591 elementos en nuestro dataset, probaremos con $nsizes = 1500, 1600, 1700, 1800, 1900, 2000, 2100, 2200, 2300, 2400, 2500$.
+
+## Preparación de los datos de entrenamiento, prueba y los folds
+
+Lo primero de todo es escalar los datos para que tengan media 0 y varianza 1. Esto es necesario para que el modelo funcione correctamente.
+```{r}
+# Escogemos los datos numéricos
+mydf.numeric <- mydf[, sapply(mydf, is.numeric)]
+
+# Escalamos los datos numéricos
+mydf.numeric.scaled <- scale(mydf.numeric)
+
+# Introducimos los datos escalados en el dataset
+mydf[, sapply(mydf, is.numeric)] <- mydf.numeric.scaled
+```
+
+Vamos a dividir el conjunto de datos en un conjunto de entrenamiento y un conjunto de prueba.
+```{r}
+# Dividimos el dataset en train y test
+train_index <- sample(1:nrow(mydf), nrow(mydf) * 0.8)
+train <- mydf[train_index, ]
+test <- mydf[-train_index, ]
+```
+
+Ahora dividimos el conjunto de train en 5 pliegues para realizar la validación cruzada.
+```{r}
+# Definimos el número de pliegues
+n <- 5
+
+# Generamos un vector de igual longitud que el numero de filas de train, asociando cada valor a un pliegue
+folds_indexes <- sample(rep(1:n, length.out = nrow(train)))
+
+# Obtenemos los pliegues aplicando la secuencia anterior a los datos de train
+folds <- split(train, folds_indexes)
+```
+
+De esta forma ya tenemos cinco pliegues preparados para realizar validacion cruzada.
+
+## Proceso de validación cruzada
+Vamos a realizar la validación cruzada con el bagging. Para realizar la validación cruzada vamos a utilizar el paquete `doParallel`. Esta librería nos permite realizar cálculos en paralelo, lo que nos permitirá reducir el tiempo de cálculo. 
+```{r}
+# Creamos un cluster para realizar los cálculos en paralelo
+cl <- makeCluster(detectCores() - 1) # Dejamos un núcleo libre
+
+# Registramos el cluster
+registerDoParallel(cl)
+
+# Definimos los valores de mtry, ntree y nodesize que vamos a probar
+values.mtry.op <- as.integer(sqrt(ncol(mydf))) # Valor "óptimo" de mtry
+values.mtry <- c(values.mtry.op - 1, values.mtry.op, values.mtry.op + 1)
+values.ntree <- c(300, 500, 700)
+values.nsizes <- c(10, 50, 100)
+
+# Creamos una matriz con todas las combinaciones posibles de los valores de mtry, ntree y nodesize
+v <- expand.grid(values.mtry, values.ntree, values.nsizes)
+colnames(v) <- c("mtry", "ntree", "nodesize")
+
+# Creamos una variable de tiempo para ver cuánto tarda en ejecutarse
+inicio <- Sys.time()
+
+# Creamos una variable para guardar el F1-Score
+f1score.folds <- rep(0, length(folds))
+accuracy.folds <- rep(0, length(folds))
+
+# Realizamos la validación cruzada con todos los pliegues e hiperparámetros
+crossvalidation.results <- foreach(i = 1:nrow(v), .combine = rbind, .packages = c("randomForest", "MLmetrics")) %dopar% {
+  for (k in seq(1:length(folds))) {
+    # Juntamos todos los folds menos el k
+    data <- do.call(rbind, folds[-k])
+
+    # Creamos el modelo de bagging
+    bag <- randomForest(Class ~ .,
+      data = data,
+      mtry = v[i, 1], ntree = v[i, 2], nodesize = v[i, 3]
+    )
+
+    # Predecimos con el pliegue que hemos dejado fuera del entrenamiento
+    y.pred <- predict(bag, newdata = folds[[k]])
+
+    # Guardamos los valores reales
+    y.true <- folds[[k]]$Class
+
+    # Guardamos el F1-Score obtenido comparando las predicciones y los datos reales del pliegue k
+    f1score.folds[k] <- F1_Score(y_pred = y.pred, y_true = y.true, positive = "Keylogger")
+    accuracy.folds[k] <- Accuracy(y_pred = y.pred, y_true = y.true)
+  }
+
+  # Hacemos la media de los F1-Score de todos los pliegues
+  mean.f1score <- mean(f1score.folds)
+  se.f1score <- sd(f1score.folds) / sqrt(length(folds))
+
+  # Hacemos una media del Accuracy de todos los pliegues
+  mean.accuracy <- mean(accuracy.folds)
+  se.accuracy <- sd(accuracy.folds) / sqrt(length(folds))
+
+  # Devolvemos los resultados
+  c(mean.f1score, se.f1score, mean.accuracy, se.accuracy)
+}
+
+# Guardamos el tiempo final
+final <- Sys.time()
+
+# Calculamos el tiempo de entrenamiento
+train.time <- as.numeric(difftime(final, inicio, units = "secs"))
+train.time <- sprintf("%02.0f:%02.0f:%02.0f", train.time %/% 3600, (train.time %% 3600) %/% 60, train.time %% 60)
+
+# Guaradmos el tiempo de entrenamiento en un DataFrame
+train.time.df <- data.frame(time_bagging = train.time)
+train.time.df$time_bagging_sec <- as.numeric(difftime(final, inicio, units = "secs"))
+
+# Guardamos el tiempo de entrenamiento en un archivo
+write.csv(train.time.df, "train_time.csv", row.names = FALSE)
+
+# Creamos un DataFrame con los resultados de la validación cruzada
+crossvalidation.results <- as.data.frame(crossvalidation.results)
+colnames(crossvalidation.results) <- c("mean_f1score", "se_f1score", "mean_accuracy", "se_accuracy")
+crossvalidation.results <- cbind(v, crossvalidation.results)
+
+# Guardamos los resultados de la validación cruzada en un archivo
+write.csv(crossvalidation.results, "crossvalitadion_bagging.csv", row.names = FALSE)
+
+crossvalidation.results
+```
 
 
 # Red Neuronal. {#red-neuronal}
